# metabeta

./: .gitignore  LICENSE  MANIFEST.in  README.md  alternatives.py  config.py  dataset.py  env.yml  generate.py  generator.py  model.py  models.py  plot.py  proposal.py  pypi.md  pyproject.toml  rnn.py  setup.py  tasks.py  test.ipynb  tokenizer.py  train.py  train.py.bak  transformer.py  utils.py
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  release-checks.yml
archive/: data.py  example.ipynb  tokenizer.py  train.py  transformer.py
archive/posthoc/: coordinate.py  laplace.py
benchmarks/: bench_reml.py
demos/: intro.ipynb  priors.ipynb  simulation.ipynb
experiments/: README.md  ablation.py  ablation_context.py  advi_convergence.py  advi_elbo_convergence.py  compare_bambi_pymc.py  compare_local_posterior.py  compare_moe.py  compare_posterior_shape.py  compare_posthoc.py  compare_reml.py  compare_statsmodels.py  compare_warmstart.py  diagnose_disagreement.py  diagnose_loo_bias.py  evaluate_oracle.py  evaluate_real.py  glmm_beta_leakage_diagnostic.py  glmm_error_analysis.py  glmm_perf_baseline.md  glmm_required_benchmark.py  glmm_shrinkage_diagnostic.py  is_marginal.py  missspecification.py  moe.py  npe_error_analysis.py  observed.py  overview.py  prior_families.py  prior_misspecification.py  rfx_corr.py  runtimes.py  structural.py  structural_misspecification.py  testset_overview.py
experiments/analytical/: README.md  estimator_analysis.md  glmm_alpha_gate_diagnostic.py  glmm_beta_blend_diagnostic.py  glmm_beta_leakage_diagnostic.py  glmm_blup_blend_oracle.py  glmm_error_analysis.py  glmm_i9_calibration_diagnostic.py  glmm_inla_comparison.py  glmm_inla_results.md  glmm_map_ablation.py  glmm_map_diagnostic.py  glmm_normal_ffx_gap_analysis.py  glmm_normal_inla_diagnostic.py  glmm_perf_baseline.md  glmm_poisson_hard_row_diagnostic.py  glmm_poisson_inla_direction_diagnostic.py  glmm_poisson_pirls_grid_diagnostic.py  glmm_poisson_row_type_diagnostic.py  glmm_poisson_variational_diagnostic.py  glmm_raw_diagnostic.py  glmm_reference_comparison.py  glmm_reml_diagnostic.py  glmm_required_benchmark.py  glmm_shrinkage_diagnostic.py  glmm_srfx_diagnostic.py  glmm_timing.py  statsmodels_reml.py
experiments/datasets/: testset_overview.py
experiments/evaluation/: loo_bias.py  npe_errors.py  oracle_posterior.py  posterior_disagreement.py  posterior_shape.py  real_posterior.py  runtimes.py
experiments/posthoc/: ablation.py  gaussian_local.py  methods.py  structural_misspec.py  warmstart_nuts.py
experiments/simulation/: advi_convergence.py  bambi_equivalence.py  bernoulli_lp_smoke_test.py  parameter_prior_coverage_plan.md  poisson_lp_smoke_test.py  prior_families.py  prior_misspec.py  real_nuts_reference.py  structural_misspec.py  testset_overview.py
experiments/utils/: moe_compare.py
metabeta/: __init__.py  dataset.py  evaluate.py  generate.py  importance.py  markov.py  plot.py  tasks.py  train.py  utils.py
metabeta/analytical/: __init__.py  bernoulli_map.py  blup.py  constants.py  estimator_analysis.md  fit.py  glm.py  glmm.py  linalg.py  map.py  normal.py  normal_map.py  plan.md  plan_bernoulli.md  plan_normal.md  plan_poisson.md  pql.py  precompute.py  reml.py  working.py
metabeta/configs/: __init__.py  presets.yaml
metabeta/data/: csv.py  csv_bak.py  dataset.py  distributions.py  fit.py  generate.py  generate_bak.py  interface.py  markov.py  markov_bambi.py  sgld.py  single.py  tasks.py
metabeta/datasets/: __init__.py  preprocess.py  preprocessor.py
metabeta/evaluation/: __init__.py  cache.py  correlation.py  coverage.py  evaluate.py  importance.py  intervals.py  moments.py  point.py  pp.py  predictive.py  resampling.py  sbc.py  summary.py
metabeta/experiments/: gaussian_ceiling.py  posterior_shape.py
metabeta/models/: __init__.py  api.py  approximator.py  approximators.py  config.yaml  embedders.py  feedforward.py  hf.md  mlp.py  posteriors.py  router.md  router.py  summarizers.py  transformers.py  utils.py
metabeta/plot/: __init__.py  comparison.py  correlation.py  coverage.py  dataset.py  parameters.py  predictive.py  recovery.py  sbc.py
metabeta/plotting/: comparison.py  correlation.py  coverage.py  dataset.py  parameters.py  predictive.py  recovery.py  runtimes.py  sbc.py  warmstart.py
metabeta/posthoc/: __init__.py  conformal.py  coordinate.py  gaussian_local.py  generative.py  importance.py  laplace.py  laplace_local.md  metropolis.py  svgd.py  warmnuts.py
metabeta/simulation/: __init__.py  activations.py  check.py  distributions.py  emulator.py  fit.py  generate.py  generate_.py  generator.py  inla.py  nonlinear.py  nutsadvi.py  prior.py  (+6 more)
rebuttals/: README.md
scripts/: build_ckpt.py  curate-fits.sh  eval.sh  evaluate.sh  fit-advi.sh  fit-big-b-mixed.sh  fit-big-b-sampled-missing.sh  fit-big-b-sampled.sh  fit-big-n-mixed.sh  fit-big-n-sampled-missing.sh  fit-big-n-sampled.sh  fit-big-p-mixed.sh  fit-big-p-sampled-missing.sh  fit-big-p-sampled.sh  fit-huge-b-mixed.sh  fit-huge-b-sampled.sh  fit-huge-n-mixed.sh  fit-huge-n-sampled.sh  fit-huge-p-mixed.sh  fit-huge-p-sampled.sh  fit-large-b-mixed.sh  fit-large-b-sampled-missing.sh  fit-large-b-sampled.sh  fit-large-n-mixed.sh  fit-large-n-sampled-missing.sh  fit-large-n-sampled.sh  fit-large-p-mixed.sh  fit-large-p-sampled-missing.sh  fit-large-p-sampled.sh  fit-medium-b-mixed.sh  fit-medium-b-sampled-missing.sh  fit-medium-b-sampled.sh  fit-medium-n-mixed.sh  fit-medium-n-sampled-missing.sh  fit-medium-n-sampled.sh  fit-medium-p-mixed.sh  fit-medium-p-sampled-missing.sh  fit-medium-p-sampled.sh  fit-mid-b-mixed.sh  fit-mid-b-sampled-missing.sh  (+217 more)
(+401 files in other folders)
