[project]
name = "metabeta"
version = "0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bambi>=0.17.2",
    "blue>=0.9.1",
    "datasets>=4.4.1",
    "ipykernel>=6.31.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "openml>=0.15.1",
    "pmlb>=1.0.1.post3",
    "pytest>=9.0.2",
    "schedulefree>=1.4.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.blue]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
(
  ^metabeta/outputs/
  | ^metabeta\.egg-info/
  | ^\.venv/
  | ^\.pytest_cache/
  | ^\.ruff_cache/
  | ^__pycache__/
)
'''
