[project]
name = "metabeta"
version = "0.3"
description = "Amortized inference for Bayesian GLMMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bambi>=0.17.2",
    "blue>=0.9.1",
    "datasets>=4.4.1",
    "ipykernel>=6.31.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "pmlb>=1.0.1.post3",
    "pytest>=9.0.2",
    "scamd",
    "schedulefree>=1.4.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "spyder-kernels>=3.1.3",
    "statsmodels>=0.14.6",
    "tabulate>=0.9.0",
    "torch>=2.9.1",
    "tqdm>=4.67.3",
    "ucimlrepo>=0.0.7",
    "wandb>=0.25.0",
]

[project.scripts]
metabeta-generate = "metabeta.simulation.generate:main"
metabeta-train = "metabeta.training.train:main"
metabeta-evaluate = "metabeta.evaluation.evaluate:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.blue]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
(
  ^metabeta/outputs/
  | ^metabeta\.egg-info/
  | ^\.venv/
  | ^\.pytest_cache/
  | ^\.ruff_cache/
  | ^__pycache__/
)
'''

[tool.uv.sources]
scamd = { git = "https://github.com/adkipnis/scamd.git" }
