[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "metabeta"
version = "0.4"
description = "Amortized inference for Bayesian GLMMs"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "CC-BY-NC-SA-4.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "arviz>=0.23.4",
    "huggingface-hub>=1.14.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=2.0.2",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.9.1",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
research = [
    "bambi>=0.17.2",
    "datasets>=4.4.1",
    "pmlb>=1.0.1.post3",
    "rpy2>=3.6.7",
    "schedulefree>=1.4.1",
    "scamd",
    "statsmodels>=0.14.6",
    "ucimlrepo>=0.0.7",
    "wandb>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/adkipnis/metabeta"
Repository = "https://github.com/adkipnis/metabeta"
Checkpoints = "https://huggingface.co/adkipnis/metabeta"

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: requires local checkpoint and data files; skipped by default",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "metabeta",
    "metabeta.analytical",
    "metabeta.analytical.*",
    "metabeta.configs",
    "metabeta.configs.models",
    "metabeta.datasets",
    "metabeta.evaluation",
    "metabeta.models",
    "metabeta.models.*",
    "metabeta.plotting",
    "metabeta.posthoc",
    "metabeta.utils",
]
exclude = [
    "archive",
    "archive.*",
    "benchmarks",
    "benchmarks.*",
    "demos",
    "demos.*",
    "experiments",
    "experiments.*",
    "metabeta.datasets.from-r",
    "metabeta.datasets.from-r.*",
    "metabeta.datasets.pmlb",
    "metabeta.datasets.pmlb.*",
    "metabeta.datasets.preprocessed",
    "metabeta.datasets.preprocessed.*",
    "metabeta.datasets.srm",
    "metabeta.datasets.srm.*",
    "metabeta.datasets.ucimlr",
    "metabeta.datasets.ucimlr.*",
    "metabeta.outputs",
    "metabeta.outputs.*",
    "metabeta.simulation",
    "metabeta.simulation.*",
    "metabeta.training",
    "metabeta.training.*",
    "scripts",
    "scripts.*",
    "tests",
    "tests.*",
]
namespaces = false

[tool.setuptools.package-data]
"metabeta.configs" = ["*.yaml", "models/*.yaml"]
"metabeta.configs.models" = ["*.yaml"]

[tool.blue]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
(
  ^metabeta/outputs/
  | ^metabeta\.egg-info/
  | ^\.venv/
  | ^\.pytest_cache/
  | ^\.ruff_cache/
  | ^__pycache__/
)
'''

[tool.uv]
package = true
environments = [
    "sys_platform == 'linux' and python_version == '3.12'",
    "sys_platform == 'darwin' and python_version == '3.12'",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
scamd = { git = "https://github.com/adkipnis/scamd.git" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[dependency-groups]
dev = [
    "blue>=0.9.1",
    "ipykernel>=6.31.0",
    "ipywidgets>=8.0",
    "jupyterlab>=4.5.7",
    "spyder-kernels>=3.1.3",
]
